After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771970 - h265parse: Fix parsing of multiple NALs in the hvcC box
h265parse: Fix parsing of multiple NALs in the hvcC box
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.8.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-26 03:54 UTC by KyungYong Kim
Modified: 2016-09-30 10:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
h265parse: Fix the offset (1.07 KB, patch)
2016-09-26 03:54 UTC, KyungYong Kim
committed Details | Review

Description KyungYong Kim 2016-09-26 03:54:12 UTC
Created attachment 336243 [details] [review]
h265parse: Fix the offset

The code in h265parse cannot parse
that the size of 'numNalus' in hvcC box is larger than 1.
Comment 1 Sebastian Dröge (slomo) 2016-09-26 06:36:24 UTC
commit 214a041e131f325093e6b67c712a5a14e8651531
Author: Kyungyong Kim <kyungyong.kim@lge.com>
Date:   Mon Sep 26 11:15:25 2016 +0900

    h265parse: Fix parsing of multiple NALs in the hvcC box
    
    https://bugzilla.gnome.org/show_bug.cgi?id=771970