h265parse: Fix parsing of multiple NALs in the hvcC box

https://bugzilla.gnome.org/show_bug.cgi?id=771970